--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" />
       </a>
-      <nav>
+      <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">How it works</a></li>
           <li><a class="main-nav-link" href="#">Meals</a></li>
@@ -29,6 +29,10 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+        <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon >
+      </button>
     </header>
     <main>
       <section class="section-hero">
